# ai-guardian

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  nginx.conf  requirements.txt
docs/adr/: 001-architecture.md  002-tech-stack.md
src/: api.py  app.py  config.py  config.rs  database.py  database.rs  lib.rs  models.py  models.rs  nginx_module.rs  performance_optimizer.rs  services.rs  tensorflow_integration.rs  tests.rs  threat_detector.rs  utils.rs  vulnerability_scanner.rs
src/services/: core.py
tests/: __init__.py  conftest.py  test_api.py  test_core.py
