# Cargo.toml

[package]
name = "ai_guardian"
version = "0.1.0"
edition = "2021"

[dependencies]
tensorflow = "0.22.0"
nginx = "0.5.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = [ "postgres" ] }
log = "0.4.16"

[dev-dependencies]
pretty_assertions = "0.7.0"

[profile.dev]
debug = true

[profile.release]
debug = false
